tests/snapshots/test_delete__delete_clause_safeguard_normative.snap
---
source: tests/delete_tests/clause.rs
expression: value
---
$ govctl clause delete RFC-0001:C-LOCKED -f
error[E0104]: Cannot delete clause from RFC-0001 while status=normative, phase=stable, version=1.0.0, and clause since=1.0.0. Clause deletion is limited to draft RFCs or Clauses introduced in the current normative spec candidate. (RFC-0001:C-LOCKED)
exit: 1
