tests/snapshots/test_delete__delete_clause_success_draft.snap
---
source: tests/delete_tests/clause.rs
expression: value
---
$ govctl clause delete RFC-0001:C-DELETE -f
✓ Deleted clause RFC-0001:C-DELETE
exit: 0

$ govctl clause list RFC-0001
[
  {
    "id": "C-KEEP",
    "rfc_id": "RFC-0001",
    "kind": "normative",
    "status": "active",
    "title": "Keep This Clause"
  }
]
exit: 0

$ govctl check
Checked:
  1 RFCs
  1 clauses
  0 ADRs
  0 work items
  0 verification guards
  0 conformance cases

✓ All checks passed
exit: 0
