tests/snapshots/test_delete__delete_work_safeguard_active.snap
---
source: tests/delete_tests/work.rs
expression: value
---
$ govctl work new Active work item --active
Created work item: gov/work/<DATE>-active-work-item.toml
  ID: WI-<DATE>-001
exit: 0

$ govctl work edit WI-<DATE>-001 acceptance_criteria --add chore: Test criterion
Added 'chore: Test criterion' to WI-<DATE>-001.acceptance_criteria
exit: 0

$ govctl work delete WI-<DATE>-001 -f
error[E0402]: Cannot delete work item: WI-<DATE>-001 is active. Only queued work items can be deleted. Use 'mv WI-<DATE>-001 cancelled' for active items. (WI-<DATE>-001)
exit: 1
