tests/snapshots/test_delete__delete_work_safeguard_done.snap
---
source: tests/delete_tests/work.rs
expression: value
---
$ govctl work new Completed work item --active
Created work item: gov/work/<DATE>-completed-work-item.toml
  ID: WI-<DATE>-001
exit: 0

$ govctl work edit WI-<DATE>-001 acceptance_criteria --add chore: Test criterion
Added 'chore: Test criterion' to WI-<DATE>-001.acceptance_criteria
exit: 0

$ govctl work edit WI-<DATE>-001 acceptance_criteria[0] --tick done
Marked 'Test criterion' as done
exit: 0

$ govctl work move WI-<DATE>-001 done
Moved <DATE>-completed-work-item.toml to done
exit: 0

$ govctl work delete WI-<DATE>-001 -f
error[E0402]: Cannot delete work item: WI-<DATE>-001 is done. Only queued work items can be deleted. Use 'mv WI-<DATE>-001 cancelled' for active items. (WI-<DATE>-001)
exit: 1
