tests/snapshots/test_delete__delete_work_success_queue.snap
---
source: tests/delete_tests/work.rs
expression: value
---
$ govctl work new Keep this work item
Created work item: gov/work/<DATE>-keep-this-work-item.toml
  ID: WI-<DATE>-001
exit: 0

$ govctl work new Delete this work item
Created work item: gov/work/<DATE>-delete-this-work-item.toml
  ID: WI-<DATE>-002
exit: 0

$ govctl work list
┌───────────────────┬────────┬───────────────────────┐
│ ID                ┆ Status ┆ Title                 │
╞═══════════════════╪════════╪═══════════════════════╡
│ WI-<DATE>-001 ┆ queue  ┆ Keep this work item   │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ WI-<DATE>-002 ┆ queue  ┆ Delete this work item │
└───────────────────┴────────┴───────────────────────┘
exit: 0

$ govctl work delete WI-<DATE>-001 -f
✓ Deleted work item WI-<DATE>-001
exit: 0

$ govctl work list
┌───────────────────┬────────┬───────────────────────┐
│ ID                ┆ Status ┆ Title                 │
╞═══════════════════╪════════╪═══════════════════════╡
│ WI-<DATE>-002 ┆ queue  ┆ Delete this work item │
└───────────────────┴────────┴───────────────────────┘
exit: 0

$ govctl check
Checked:
  0 RFCs
  0 clauses
  0 ADRs
  1 work items
  0 verification guards

warning[W0108]: Work item has placeholder description (hint: `govctl work edit WI-<DATE>-002 description --set "..."`) (gov/work/<DATE>-delete-this-work-item.toml)
exit: 0
